--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -66,14 +66,14 @@
   }
 }
 
-@layer base {
+/* @layer base {
   * {
     @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
 
 .switch-btn {
   @apply bg-bgray-300;
